force-app/main/default/objects/Batalha__c/fields/DataInicio__c.field-meta.xml
<CustomField>
    <fullName>DataInicio__c</fullName>
    <description>Data do Início da Batalha</description>
    <inlineHelpText>Inclua a Data do Início da Batalha</inlineHelpText>
    <label>Data de Início</label>
    <type>Date</type>
</CustomField>