force-app/main/default/objects/Batalha__c/fields/DataTermino__c.field-meta.xml
<CustomField>
    <fullName>DataTermino__c</fullName>
    <description>Data de Término da Batalha</description>
    <inlineHelpText>Inclua a data do término da batalha</inlineHelpText>
    <label>Data de Término</label>
    <type>Date</type>
</CustomField>