force-app/main/default/objects/Batalha__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <description>Descrição da Batalha</description>
    <inlineHelpText>Escreva a descrição da batalha</inlineHelpText>
    <label>Descrição</label>
    <type>TextArea</type>
</CustomField>