force-app/main/default/objects/Batalha__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Define o Status da Batalha</description>
    <inlineHelpText>Define o Status da Batalha</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agendada</fullName>
                <default>true</default>
                <label>Agendada</label>
            </value>
            <value>
                <fullName>Em Andamento</fullName>
            </value>
            <value>
                <fullName>Finalizada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>